--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,7 @@
+server:
+  port: 8080
+  servlet:
+    context-path: /
 spring:
   main:
     banner-mode: off
@@ -6,6 +10,7 @@ spring:
     url: jdbc:mysql://localhost:3306/airticket
     username: root
     password: 49vobollo1403V
+
   jpa:
     show-sql: true
     hibernate:
