--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,19 +1,9 @@
 server:
   port: 8080
-  servlet:
-    context-path: /
+
 spring:
-  mvc:
-    content-negotiation:
-      favor-parameter: true
   main:
     banner-mode: off
-
-  h2:
-    console:
-      enabled: true
-      settings:
-        web-allow-others: true
 
   datasource:
     url: ${DATASOURCE.URL}
@@ -21,16 +11,16 @@ spring:
     password: ${DATASOURCE.PASSWORD}
 
   liquibase:
-    enabled: true
     change-log: classpath:db/changelog/changes/v0.0.1-SNAPSHOT/v0.0.1-master.xml
-    drop-first: false
 
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+    properties:
+      hibernate:
+      format_sql: true
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+    show-sql: true
     hibernate:
-      ddl-auto: create-drop
-    show-sql: false
-    defer-datasource-initialization: true
+      ddl-auto: none
 
 springdoc:
   api-docs:
