--- a/src/main/resources/db/changelog/changes/v0.0.1-SNAPSHOT/create-tables-changelog.yaml
+++ b/src/main/resources/db/changelog/changes/v0.0.1-SNAPSHOT/create-tables-changelog.yaml
@@ -24,7 +24,17 @@ databaseChangeLog:
                     nullable: false
               - column:
                   name: balance
-                  type: DECIMAL
+                  type: DECIMAL(10,2)
+                  constraints:
+                    nullable: false
+              - column:
+                  name: owner
+                  type: VARCHAR(255)
+                  constraints:
+                    nullable: false
+              - column:
+                  name: create_account_date
+                  type: TIMESTAMP
                   constraints:
                     nullable: false
               - column:
@@ -33,9 +43,31 @@ databaseChangeLog:
                   constraints:
                     nullable: false
               - column:
-                  name: owner
-                  type: VARCHAR(255)
+                  name: role
+                  type: ENUM( 'ADMIN', 'PASSENGER')
                   constraints:
+                    nullable: false
+
+  - changeSet:
+      id: create-cart-table
+      author: RuslanVahner
+      changes:
+        - createTable:
+            tableName: Cart
+            columns:
+              - column:
+                  name: id
+                  type: BINARY(16)
+                  constraints:
+                    primaryKey: true
+                    nullable: false
+              - column:
+                  name: account_id
+                  type: BINARY(16)
+                  constraints:
+                    foreignKeyName: fk_cart_account
+                    referencedTableName: Account
+                    referencedColumnNames: id
                     nullable: false
 
   - changeSet:
@@ -70,7 +102,7 @@ databaseChangeLog:
                   name: phone
                   type: VARCHAR(20)
                   constraints:
-                    nullable: false
+                    nullable: true
               - column:
                   name: email
                   type: VARCHAR(60)
@@ -86,11 +118,11 @@ databaseChangeLog:
                     nullable: false
 
   - changeSet:
-      id: create-cart-table
+      id: create-authorities-table
       author: RuslanVahner
       changes:
         - createTable:
-            tableName: Cart
+            tableName: Authority
             columns:
               - column:
                   name: id
@@ -99,25 +131,22 @@ databaseChangeLog:
                     primaryKey: true
                     nullable: false
               - column:
-                  name: total_cost
-                  type: DECIMAL
+                  name: authority
+                  type: VARCHAR(255)
                   constraints:
                     nullable: false
               - column:
-                  name: account_id
-                  type: BINARY(16)
+                  name: role
+                  type: ENUM( 'ADMIN', 'PASSENGER')
                   constraints:
-                    foreignKeyName: fk_cart_account
-                    referencedTableName: Account
-                    referencedColumnNames: id
                     nullable: false
 
   - changeSet:
-      id: create-trips-table
+      id: create-flight-table
       author: RuslanVahner
       changes:
         - createTable:
-            tableName: Trips
+            tableName: Flight
             columns:
               - column:
                   name: id
@@ -126,7 +155,7 @@ databaseChangeLog:
                     primaryKey: true
                     nullable: false
               - column:
-                  name: name_trips
+                  name: name_flight
                   type: VARCHAR(255)
                   constraints:
                     nullable: false
@@ -136,32 +165,47 @@ databaseChangeLog:
                   constraints:
                     nullable: false
               - column:
-                  name: departure_time
-                  type: TIMESTAMP
+                  name: departure_airport
+                  type: VARCHAR(255)
                   constraints:
                     nullable: false
               - column:
-                  name: arrival_time
-                  type: TIMESTAMP
+                  name: arrival_airport
+                  type: VARCHAR(255)
                   constraints:
                     nullable: false
               - column:
                   name: flight_time
-                  type: TIME
+                  type: DATETIME
                   constraints:
                     nullable: false
               - column:
-                  name: trips_status
-                  type: ENUM('ACTIVE', 'CANCELLED', 'TRANSFERRED')
+                  name: departure_date
+                  type: TIMESTAMP
+                  constraints:
+                    nullable: false
+              - column:
+                  name: arrival_date
+                  type: TIMESTAMP
+                  constraints:
+                    nullable: false
+              - column:
+                  name: airline
+                  type: VARCHAR(255)
+                  constraints:
+                    nullable: false
+              - column:
+                  name: flight_status
+                  type: ENUM('ACTIVE', 'INACTIVE', 'CANCELLED')
                   constraints:
                     nullable: false
 
   - changeSet:
-      id: create-airline-table
+      id: create-reservations-table
       author: RuslanVahner
       changes:
         - createTable:
-            tableName: Airline
+            tableName: Reservations
             columns:
               - column:
                   name: id
@@ -170,59 +214,14 @@ databaseChangeLog:
                     primaryKey: true
                     nullable: false
               - column:
-                  name: airline_name
+                  name: reservations_reference
                   type: VARCHAR(255)
                   constraints:
                     nullable: false
               - column:
-                  name: airline_price
-                  type: DECIMAL
+                  name: reservations_date
+                  type: TIMESTAMP
                   constraints:
-                    nullable: false
-              - column:
-                  name: trips_id
-                  type: BINARY(16)
-                  constraints:
-                    foreignKeyName: fk_airline_trips
-                    referencedTableName: Trips
-                    referencedColumnNames: id
-                    nullable: true
-
-  - changeSet:
-      id: create-airport-table
-      author: RuslanVahner
-      changes:
-        - createTable:
-            tableName: Airport
-            columns:
-              - column:
-                  name: id
-                  type: BINARY(16)
-                  constraints:
-                    primaryKey: true
-                    nullable: false
-              - column:
-                  name: name_airport
-                  type: VARCHAR(255)
-                  constraints:
-                    nullable: false
-              - column:
-                  name: country
-                  type: VARCHAR(255)
-                  constraints:
-                    nullable: false
-              - column:
-                  name: address
-                  type: VARCHAR(255)
-                  constraints:
-                    nullable: false
-              - column:
-                  name: airline_id
-                  type: BINARY(16)
-                  constraints:
-                    foreignKeyName: fk_airport_airline
-                    referencedTableName: Airline
-                    referencedColumnNames: id
                     nullable: false
 
   - changeSet:
@@ -240,11 +239,11 @@ databaseChangeLog:
                     nullable: false
               - column:
                   name: price
-                  type: DECIMAL(10, 2)
+                  type: DECIMAL(10,2)
                   constraints:
                     nullable: false
               - column:
-                  name: data
+                  name: purchase_time
                   type: TIMESTAMP
                   constraints:
                     nullable: false
@@ -252,6 +251,29 @@ databaseChangeLog:
                   name: ticket_number
                   type: INT
                   constraints:
+                    nullable: false
+              - column:
+                  name: ticket_class
+                  type: ENUM('ECONOMY', 'BUSINESS')
+                  constraints:
+                    nullable: false
+              - column:
+                  name: ticket_status
+                  type: ENUM('RESERVED', 'PAID', 'CANCELLED')
+                  constraints:
+                    nullable: false
+              - column:
+                  name: type
+                  type: ENUM('ADULT', 'CHILD')
+                  constraints:
+                    nullable: false
+              - column:
+                  name: flight_id
+                  type: BINARY(16)
+                  constraints:
+                    foreignKeyName: fk_ticket_flight
+                    referencedTableName: Flight
+                    referencedColumnNames: id
                     nullable: false
               - column:
                   name: account_id
@@ -262,26 +284,23 @@ databaseChangeLog:
                     referencedColumnNames: id
                     nullable: false
               - column:
-                  name: service
-                  type: ENUM('ECONOMY', 'BUSINESS', 'FIRST')
-                  constraints:
-                    nullable: false
-              - column:
-                  name: type
-                  type: ENUM('ADULT', 'CHILD')
-                  constraints:
-                    nullable: false
-              - column:
-                  name: trips_id
+                  name: reservation_id
                   type: BINARY(16)
                   constraints:
-                    foreignKeyName: fk_ticket_trips
-                    referencedTableName: Trips
+                    foreignKeyName: fk_ticket_reservations
+                    referencedTableName: Reservations
                     referencedColumnNames: id
               - column:
-                  name: airport_id
+                  name: passenger_id
                   type: BINARY(16)
                   constraints:
-                    foreignKeyName: fk_ticket_airport
-                    referencedTableName: Airport
+                    foreignKeyName: fk_ticket_passenger
+                    referencedTableName: Passenger
+                    referencedColumnNames: id
+              - column:
+                  name: cart_id
+                  type: BINARY(16)
+                  constraints:
+                    foreignKeyName: fk_ticket_cart
+                    referencedTableName: Cart
                     referencedColumnNames: id
