--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -3,15 +3,15 @@ spring:
     enabled: false
 
   datasource:
-    url: jdbc:h2:mem:testDB
+    url: jdbc:h2:file:./testDB
     username: sa
     password:
     driver-class-name: org.h2.Driver
 
-  jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-    hibernate:
-      ddl-auto: none
+#  jpa:
+#    database-platform: org.hibernate.dialect.H2Dialect
+#    hibernate:
+#      ddl-auto: none
 
   sql:
     init:
