--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,16 +33,11 @@ spring:
           starttls:
             enable: true
 
-#variables:
-#  jwtAccessSecret: "secret"
-#  jwtRefreshSecret: "refresh"
-#  jwtExpirationMS: 432000000
-
-
 jwt:
   secret:
-    access: ${JWT.SECRET.ACCESS}
-    refresh: ${JWT.SECRET.REFRESH}
+    access: "CJUIR+3cQjBjaGM3tHzjFY5/VRyGbiVccrezNMUnM8M="
+    refresh: "Aw5EPKS75TnCgF9S5Bs7diIPmp065owR6yfCf3S2B00="
+  expirations: 432000000
 
 logging:
   level:
@@ -54,5 +49,6 @@ logging:
 springdoc:
   api-docs:
     enabled: true
-swagger-ui:
-  enabled: true
+  swagger-ui:
+    enabled: true
+
